syntax = "proto3";

package book;

option go_package = "github.com/mozgunovdm/book-grpc;booknpc";

message Book {
   string id = 1;
   string code = 2;
   string name = 3;
   string author = 4;
   string publisher = 5;
   string published_in = 6;
}
  
message CreateBookRequest {
   Book book = 1;
}
  
message CreateBookResponse {
   Book book = 1;
}
  
message ReadBookRequest {
   string id = 1;
}
  
message ReadBookResponse {
   Book book = 1;
}
  
message UpdateBookRequest {
   Book book = 1;
}
  
message UpdateBookResponse {
   Book book = 1;
}
  
message DeleteBookRequest {
   string code = 1;
}
  
message DeleteBookResponse {
   string code = 1;
}
  
message ListBookRequest {
  
}
  
message ListBookResponse {
   Book book = 1;
}
  
service BookService {
   rpc CreateBook (CreateBookRequest) returns (CreateBookResponse);
   rpc ReadBook (ReadBookRequest) returns (ReadBookResponse); 
   rpc UpdateBook (UpdateBookRequest) returns (UpdateBookResponse); 
   rpc DeleteBook (DeleteBookRequest) returns (DeleteBookResponse); 
   rpc ListBook (ListBookRequest) returns (stream ListBookResponse);
}